@@ -269,7 +269,7 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
     /**
      * Actual collation index to collation name map for given server URLs.
      */
-    private static final Map<String, Map<Long, String>> dynamicIndexToCollationMapByUrl = new HashMap<String, Map<Long, String>>();
+    private static final Map<String, Map<Number, String>> dynamicIndexToCollationMapByUrl = new HashMap<String, Map<Number, String>>();
 
     /**
      * Actual collation index to mysql charset name map for given server URLs.
@@ -925,7 +925,7 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
     private void buildCollationMapping() throws SQLException {
 
         Map<Integer, String> indexToCharset = null;
-        Map<Long, String> sortedCollationMap = null;
+        Map<Number, String> sortedCollationMap = null;
         Map<Integer, String> customCharset = null;
         Map<String, Integer> customMblen = null;
 
@@ -947,7 +947,7 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
                 java.sql.ResultSet results = null;
 
                 try {
-                    sortedCollationMap = new TreeMap<Long, String>();
+                    sortedCollationMap = new TreeMap<Number, String>();
                     customCharset = new HashMap<Integer, String>();
                     customMblen = new HashMap<String, Integer>();
 
@@ -968,8 +968,8 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
                         }
                     }
 
-                    for (Iterator<Map.Entry<Long, String>> indexIter = sortedCollationMap.entrySet().iterator(); indexIter.hasNext();) {
-                        Map.Entry<Long, String> indexEntry = indexIter.next();
+                    for (Iterator<Map.Entry<Number, String>> indexIter = sortedCollationMap.entrySet().iterator(); indexIter.hasNext();) {
+                        Map.Entry<Number, String> indexEntry = indexIter.next();
 
                         int collationIndex = indexEntry.getKey().intValue();
                         String charsetName = indexEntry.getValue();
