@@ -2122,7 +2122,11 @@ public class MetaDataRegressionTest extends BaseTestCase {
     public void testBug34194() throws Exception {
         createTable("bug34194", "(id integer,geom geometry)");
 
-        this.stmt.execute("insert into bug34194 values('1',GeomFromText('POINT(622572.881 5156121.034)'))");
+        if (!versionMeetsMinimum(5, 6)) {
+            this.stmt.execute("insert into bug34194 values('1', GeomFromText('POINT(622572.881 5156121.034)'))");
+        } else {
+            this.stmt.execute("insert into bug34194 values('1', ST_GeomFromText('POINT(622572.881 5156121.034)'))");
+        }
         this.rs = this.stmt.executeQuery("select * from bug34194");
         ResultSetMetaData RSMD = this.rs.getMetaData();
         assertEquals("GEOMETRY", RSMD.getColumnTypeName(2));
