@@ -874,8 +874,7 @@ public class ConnectionTest extends BaseTestCase {
      */
     public void testFailoverConnection() throws Exception {
 
-        if (!isServerRunningOnWindows()) { // windows sockets don't
-                                          // work for this test
+        if (!isServerRunningOnWindows()) { // windows sockets don't work for this test
             Properties props = new Properties();
             props.setProperty("autoReconnect", "true");
             props.setProperty("failOverReadOnly", "false");
@@ -1382,7 +1381,7 @@ public class ConnectionTest extends BaseTestCase {
     }
 
     public void testUseLocalSessionStateRollback() throws Exception {
-        if (!versionMeetsMinimum(6, 0, 0)) {
+        if (!versionMeetsMinimum(5, 5, 0)) {
             return;
         }
 
@@ -1427,8 +1426,9 @@ public class ConnectionTest extends BaseTestCase {
         int rollbackCount = 0;
         int rollbackPos = 0;
 
+        // space is important here, we don't want to count occurrences in stack traces
         while (rollbackPos != -1) {
-            rollbackPos = searchIn.indexOf("rollback", rollbackPos);
+            rollbackPos = searchIn.indexOf(" rollback", rollbackPos);
 
             if (rollbackPos != -1) {
                 rollbackPos += "rollback".length();
@@ -1441,7 +1441,7 @@ public class ConnectionTest extends BaseTestCase {
         int commitCount = 0;
         int commitPos = 0;
 
-        // space is important here, we don't want to count "autocommit"
+        // space is important here, we don't want to count "autocommit" nor occurrences in stack traces
         while (commitPos != -1) {
             commitPos = searchIn.indexOf(" commit", commitPos);
 
